fix: prompt content overflows horizontally (#705)
Resolves #705

--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -91,17 +91,17 @@ blockquote {
   color: var(--blockquote-text-color);
 
   &[class^="prompt-"] {
-    display: flex;
     border-left: 0;
     border-radius: 6px;
-    padding: 0.75rem 1.2rem;
+    padding: 0.75rem 1.2rem 0.75rem 3rem;
     color: var(--prompt-text-color);
 
     &::before {
-      margin-right: 1rem;
       font-family: "Font Awesome 5 Free";
       text-align: center;
       width: 1.25rem;
+      position: absolute;
+      left: 2.5rem;
     }
 
     p:last-child {
@@ -443,7 +443,6 @@ img[data-src] {
   line-height: 1.8;
   margin-top: 2rem;
   overflow-wrap: break-word;
-  word-wrap: break-word;
 
   a {
     &:not(.img-link) {
@@ -1206,6 +1205,10 @@ $sidebar-display: "sidebar-display";
       > blockquote[class^=prompt-] {
         @include ml-mr(-1.25rem);
         border-radius: 0;
+
+        &::before {
+          left: 1rem;
+        }
       }
     }
 
